<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>com.example.rednote</groupId>
	<artifactId>rednote_parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>rednote_parent</name>
	<packaging>pom</packaging>
	<description>Demo project for Spring Boot</description>

    <modules>
		<module>common_lib</module>
        <module>note_service</module>
        <module>gateway_service</module>
    </modules>


    <properties>
		<note.version>1.0.0-SNAPSHOT</note.version>
        <java.version>17</java.version>
        <spring-boot.version>3.5.4</spring-boot.version>
        <grpc.version>1.63.0</grpc.version>
        <protobuf.version>3.25.1</protobuf.version>
        <grpc-spring-boot-starter.version>2.15.0.RELEASE</grpc-spring-boot-starter.version>
        <lombok.version>1.18.30</lombok.version>
    </properties>

<dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-dependencies</artifactId>
			<version>${spring-boot.version}</version>
			<type>pom</type>
			<scope>import</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.example.rednote</groupId>
			<artifactId>common_lib</artifactId>
			<version>${note.version}</version>
		</dependency>
	</dependencies>
</dependencyManagement>


	<build>
		 <plugins>
        <!-- 编译器插件，配置 JDK 版本 -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <release>${java.version}</release>
                <encoding>UTF-8</encoding>
            </configuration>
        </plugin>

        <!-- Spring Boot 打包插件，只保留一份，移除 Lombok 排除配置 -->
        <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
                <jvmArguments>
                    -Xms2g -Xmx2g -XX:+UseG1GC
                    -Xlog:gc*,safepoint:file=./gc-logs/gc-%p.log:time,uptime,level,tags:filecount=5,filesize=50M
                </jvmArguments>
            </configuration>
        </plugin>
    </plugins>
	</build>

</project>
